--- a/src/sox/examples/state_estimation.ipynb
+++ b/src/sox/examples/state_estimation.ipynb
@@ -25,7 +25,7 @@
     "from sox.sensor.noise import Normal\n",
     "from sox.sensor.fault import Drift, StuckAt\n",
     "from sox.filter.coulomb_count import CoulombCount\n",
-    "from sox.filter.extended_kalman_filter import ExtendedKalmanFilter\n"
+    "from sox.filter.extended_kalman_filter import ExtendedKalmanFilter"
    ],
    "metadata": {
     "collapsed": false,
@@ -88,9 +88,7 @@
    "source": [
     "# sets up the coulomb counter\n",
     "\n",
-    "soc_with_coulomb_count = CoulombCount(\n",
-    "    initial_soc=0.75, capacity=default_inputs.capacity, sampling_time=1.0\n",
-    ")\n",
+    "soc_with_coulomb_count = CoulombCount(initial_soc=0.75, capacity=default_inputs.capacity, sampling_time=1.0)\n",
     "\n",
     "\n",
     "# sets up the extended kalman filter\n",
@@ -98,7 +96,7 @@
     "rc_pairs = 1  # real value: 1\n",
     "capacity = 10  # real value: 10\n",
     "initial_soc = 0.75  # real value: 0.8\n",
-    "ocv_func = default_inputs.open_circuit_voltage  \n",
+    "ocv_func = default_inputs.open_circuit_voltage\n",
     "r0 = 4.5e-4  # real value: variable\n",
     "r1 = 6e-4  # real value: variable\n",
     "c1 = 5e4  # real value: variable\n",
@@ -112,7 +110,7 @@
     "R = np.array([[1e-5]])  # measurement noise\n",
     "\n",
     "ekf = ExtendedKalmanFilter(F, B, Q, R, x0, P0)  # x_bar=Fx+Bu, z=Hx\n",
-    "soc_with_ekf = SOCWithEKF(ocv_func, rc_pairs)\n"
+    "soc_with_ekf = SOCWithEKF(ocv_func, rc_pairs)"
    ],
    "metadata": {
     "collapsed": false,
@@ -171,7 +169,7 @@
     "    ],\n",
     ")\n",
     "\n",
-    "sensors = [voltage_sensor, current_sensor, temperature_sensor]\n"
+    "sensors = [voltage_sensor, current_sensor, temperature_sensor]"
    ],
    "metadata": {
     "collapsed": false,
@@ -239,7 +237,7 @@
     "        v_sense.append(voltage_reading)\n",
     "        curr_sense.append(current_reading)\n",
     "        temp_sense.append(temperature_reading)\n",
-    "        \n",
+    "\n",
     "except IndexError as e:\n",
     "    print(e)"
    ],
@@ -287,21 +285,16 @@
     "from sox.utils import quick_plot\n",
     "\n",
     "quick_plot(\n",
-    "    sampling_time = dt,\n",
-    "    data=[\n",
-    "        [v_sense, voltage],\n",
-    "        [curr_sense, current],\n",
-    "        [temp_sense, cell_temperature],\n",
-    "        [soc_cc, soc_ekf, soc]\n",
-    "    ],\n",
-    "    legend = [\n",
+    "    sampling_time=dt,\n",
+    "    data=[[v_sense, voltage], [curr_sense, current], [temp_sense, cell_temperature], [soc_cc, soc_ekf, soc]],\n",
+    "    legend=[\n",
     "        [\"voltage sense\", \"voltage\"],\n",
     "        [\"current sense\", \"current\"],\n",
     "        [\"temperature sense\", \"temperature\"],\n",
-    "        [\"soc cc\", \"soc ekf\", \"soc\"]\n",
+    "        [\"soc cc\", \"soc ekf\", \"soc\"],\n",
     "    ],\n",
     "    x_label=\"Time (s)\",\n",
-    "    y_label=[\"Voltage (V)\", \"Current (A)\", \"Temperature (K)\", \"SOC\"]\n",
+    "    y_label=[\"Voltage (V)\", \"Current (A)\", \"Temperature (K)\", \"SOC\"],\n",
     ")"
    ],
    "metadata": {
