--- a/docs/tutorials/01 - battery cycling.ipynb
+++ b/docs/tutorials/01 - battery cycling.ipynb
@@ -7,7 +7,7 @@
     "collapsed": false
    },
    "source": [
-    "# Tutorial 1: Battery Cycling Simulations\n",
+    "# Battery Cycling Simulations\n",
     "\n",
     "This notebook demonstrates how to use the Thevenin model to simulate a variety of cycling experiments that are implemented in `sox`. The Thevenin battery model uses [PyBaMM](https://docs.pybamm.org/en/latest/index.html) in the backend, and adds abstractions for easier user interface."
    ]
@@ -33,7 +33,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Cycling Protocols\n",
+    "## Cycling Protocols\n",
     "There are a handful of cycling protocols that are implemented in the `sox.plant.protocol` module. These protocols are used to simulate the cycling experiments. The protocols are: \n",
     "\n",
     "- `cc_charge_cv_rest` (CC charge, CV hold, then rest)\n",
@@ -72,7 +72,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Perform Simulations\n",
+    "## Perform Simulations\n",
     "We here build experiment objects from protocols and simulate battery response by passing experiments to the `battery` object as in `battery.solve(experiment)`. \n",
     "\n",
     "The result is a simulation object with the following properties: `time`, `voltage`, `rc_voltage`, `ocv`, `current`,\n",
@@ -139,7 +139,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Compare Results\n",
+    "## Compare Results\n",
     "\n",
     "Utility function `quick_plot` can be used to create interactive graphs of electrical and thermal battery parameters."
    ],
