updates ukf tutorial

--- a/docs/tutorials/02 - soc estimation by ekf.ipynb
+++ b/docs/tutorials/02 - soc estimation by ekf.ipynb
@@ -36,7 +36,7 @@
     "V_{\\mathrm{cell}, k} &=\\mathrm{OCV}\\left(\\mathrm{SOC}_{k}\\right)-R_{1} I_{k}-V_{\\mathrm{rc}_{1}, k}\n",
     "\\end{aligned}$$\n",
     "\n",
-    "where $\\mathrm{SOC}$ is the state of charge, $Q$ is the capacity, $I$ is the current, $V_{\\mathrm{cell}}$ is the cell voltage, $V_{\\mathrm{rc}_{1}}$ is the voltage across the resistor-capacitor pair, $C_{1}$ is the capacitance, and $R_{1}$ is the resistance. \n",
+    "where $\\mathrm{SOC}$ is the state of charge, $Q$ is the capacity, $I$ is the current, $V_{\\mathrm{cell}}$ is the cell voltage, $V_{\\mathrm{rc}_1}$ is the voltage across the resistor-capacitor pair, $C_1$ is the capacitance, and $R_1$ is the resistance. \n",
     "\n",
     "### Extended Kalman Filter\n",
     "The EKF linearizes the system model by using the first-order Taylor series expansion of the nonlinear system model about the current state estimate $\\mathbf{x}_{k}$ and the current measurement $\\mathbf{z}_{k}$. As a result, EKF is a recursive estimator that uses the current state estimate $\\mathbf{x}_{k}$ and the current measurement $\\mathbf{z}_{k}$ to compute the next state estimate $\\mathbf{x}_{k+1}$. \n",
@@ -44,19 +44,25 @@
     "The EKF is a two-step process: prediction and update. The prediction step uses the state transition matrix $\\mathbf{F}_{k}$ to propagate the state estimate forward in time. The update step uses the measurement matrix $\\mathbf{H}_{k}$ to update the state estimate based on the measurement. The EKF is an optimal estimator in the sense that it minimizes the mean squared error between the true state and the estimated state. The EKF is defined by the following equations:\n",
     "\n",
     "Prediction step:\n",
-    "$$\\begin{aligned}\n",
+    "$$\n",
+    "\\begin{aligned}\n",
     "\\mathbf{x}_{k} &= \\mathbf{F}_{k} \\mathbf{x}_{k-1} + \\mathbf{B}_{k} \\mathbf{u}_{k} \\\\\n",
     "\\mathbf{P}_{k} &= \\mathbf{F}_{k} \\mathbf{P}_{k-1} \\mathbf{F}_{k}^{T} + \\mathbf{Q}_{k}\n",
-    "\\end{aligned}$$\n",
+    "\\end{aligned}\n",
+    "$$\n",
     "\n",
     "Update step:\n",
-    "$$\\begin{aligned}\n",
+    "$$\n",
+    "\\begin{aligned}\n",
     "\\mathbf{K}_{k} &=\\mathbf{P}_{k} \\mathbf{H}_{k}^{T}\\left(\\mathbf{H}_{k} \\mathbf{P}_{k} \\mathbf{H}_{k}^{T}+\\mathbf{R}_{k}\\right)^{-1} \\\\\n",
     "\\mathbf{x}_{k} &=\\mathbf{x}_{k}+\\mathbf{K}_{k}\\left(\\mathbf{z}_{k}-\\mathbf{h}\\left(\\mathbf{x}_{k}\\right)\\right) \\\\\n",
     "\\mathbf{P}_{k} &=\\left(\\mathbf{I}-\\mathbf{K}_{k} \\mathbf{H}_{k}\\right) \\mathbf{P}_{k}\n",
-    "\\end{aligned}$$\n",
+    "\\end{aligned}\n",
+    "$$\n",
     "\n",
-    "where $\\mathbf{x}_{k}$ is the state vector, $\\mathbf{u}_{k}$ is the input vector, $\\mathbf{z}_{k}$ is the measurement vector, $\\mathbf{F}_{k}$ is the state transition matrix, $\\mathbf{h}$ is the measurement function, $\\mathbf{H}_{k}=\\frac{\\partial \\mathbf{h}}{\\partial \\mathbf{x}}\\left(\\mathbf{x}_{k}\\right)$ is the measurement Jacobian matrix, $\\mathbf{P}_{k}$ is the covariance matrix, $\\mathbf{Q}_{k}$ is the process noise covariance matrix, and $\\mathbf{R}_{k}$ is the measurement noise covariance matrix. For an isothermal Thevenin model, the EKF is defined by the following equations:\n",
+    "where $\\mathbf{x}_{k}$ is the state vector, $\\mathbf{u}_{k}$ is the input vector, $\\mathbf{z}_{k}$ is the measurement vector, $\\mathbf{F}_{k}$ is the state transition matrix, $\\mathbf{h}$ is the measurement function, $\\mathbf{H}_{k}=\\frac{\\partial \\mathbf{h}}{\\partial \\mathbf{x}}\\left(\\mathbf{x}_{k}\\right)$ is the measurement Jacobian matrix, $\\mathbf{P}_{k}$ is the covariance matrix, $\\mathbf{Q}_{k}$ is the process noise covariance matrix, and $\\mathbf{R}_{k}$ is the measurement noise covariance matrix. \n",
+    "\n",
+    "For an isothermal Thevenin model, the EKF is defined by the following equations:\n",
     "\n",
     "\n",
     "<div align=\"center\">\n",
