adds pre-commit

--- a/docs/tutorials/02 - soc estimation by ekf.ipynb
+++ b/docs/tutorials/02 - soc estimation by ekf.ipynb
@@ -7,7 +7,7 @@
     "collapsed": false
    },
    "source": [
-    "# State of Charge Estimation with EKF\n",
+    "# SOC Estimation with EKF\n",
     "This notebook demonstrates the use of the extended Kalman filter (EKF) for state of charge (SOC) estimation. The EKF is a nonlinear state estimator that can be used to estimate the SOC of a battery. "
    ]
   },
@@ -44,21 +44,19 @@
     "The EKF is a two-step process: prediction and update. The prediction step uses the state transition matrix $\\mathbf{F}_{k}$ to propagate the state estimate forward in time. The update step uses the measurement matrix $\\mathbf{H}_{k}$ to update the state estimate based on the measurement. The EKF is an optimal estimator in the sense that it minimizes the mean squared error between the true state and the estimated state. The EKF is defined by the following equations:\n",
     "\n",
     "Prediction step:\n",
-    "$$\n",
-    "\\begin{aligned}\n",
+    "\n",
+    "$$\\begin{aligned}\n",
     "\\mathbf{x}_{k} &= \\mathbf{F}_{k} \\mathbf{x}_{k-1} + \\mathbf{B}_{k} \\mathbf{u}_{k} \\\\\n",
     "\\mathbf{P}_{k} &= \\mathbf{F}_{k} \\mathbf{P}_{k-1} \\mathbf{F}_{k}^{T} + \\mathbf{Q}_{k}\n",
-    "\\end{aligned}\n",
-    "$$\n",
+    "\\end{aligned}$$\n",
     "\n",
     "Update step:\n",
-    "$$\n",
-    "\\begin{aligned}\n",
+    "\n",
+    "$$\\begin{aligned}\n",
     "\\mathbf{K}_{k} &=\\mathbf{P}_{k} \\mathbf{H}_{k}^{T}\\left(\\mathbf{H}_{k} \\mathbf{P}_{k} \\mathbf{H}_{k}^{T}+\\mathbf{R}_{k}\\right)^{-1} \\\\\n",
     "\\mathbf{x}_{k} &=\\mathbf{x}_{k}+\\mathbf{K}_{k}\\left(\\mathbf{z}_{k}-\\mathbf{h}\\left(\\mathbf{x}_{k}\\right)\\right) \\\\\n",
     "\\mathbf{P}_{k} &=\\left(\\mathbf{I}-\\mathbf{K}_{k} \\mathbf{H}_{k}\\right) \\mathbf{P}_{k}\n",
-    "\\end{aligned}\n",
-    "$$\n",
+    "\\end{aligned}$$\n",
     "\n",
     "where $\\mathbf{x}_{k}$ is the state vector, $\\mathbf{u}_{k}$ is the input vector, $\\mathbf{z}_{k}$ is the measurement vector, $\\mathbf{F}_{k}$ is the state transition matrix, $\\mathbf{h}$ is the measurement function, $\\mathbf{H}_{k}=\\frac{\\partial \\mathbf{h}}{\\partial \\mathbf{x}}\\left(\\mathbf{x}_{k}\\right)$ is the measurement Jacobian matrix, $\\mathbf{P}_{k}$ is the covariance matrix, $\\mathbf{Q}_{k}$ is the process noise covariance matrix, and $\\mathbf{R}_{k}$ is the measurement noise covariance matrix. \n",
     "\n",
@@ -91,8 +89,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T20:44:29.166620800Z",
-     "start_time": "2023-11-24T20:44:16.450545200Z"
+     "end_time": "2023-11-26T03:10:24.684622700Z",
+     "start_time": "2023-11-26T03:10:20.519041100Z"
     }
    },
    "outputs": [],
@@ -129,8 +127,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T20:44:33.655314300Z",
-     "start_time": "2023-11-24T20:44:29.166620800Z"
+     "end_time": "2023-11-26T03:10:29.010518500Z",
+     "start_time": "2023-11-26T03:10:24.688674100Z"
     }
    },
    "outputs": [
@@ -186,8 +184,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T20:44:33.927774400Z",
-     "start_time": "2023-11-24T20:44:33.655314300Z"
+     "end_time": "2023-11-26T03:10:29.284055500Z",
+     "start_time": "2023-11-26T03:10:29.010518500Z"
     }
    },
    "outputs": [],
@@ -229,8 +227,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T20:44:33.936948400Z",
-     "start_time": "2023-11-24T20:44:33.927774400Z"
+     "end_time": "2023-11-26T03:10:29.295845400Z",
+     "start_time": "2023-11-26T03:10:29.289082Z"
     }
    },
    "outputs": [],
@@ -258,19 +256,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T20:44:34.676600900Z",
-     "start_time": "2023-11-24T20:44:33.936948400Z"
+     "end_time": "2023-11-26T03:10:29.889972Z",
+     "start_time": "2023-11-26T03:10:29.295845400Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sensor 'voltage' finished reading.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "v_sense = []\n",
     "curr_sense = []\n",
@@ -280,31 +270,27 @@
     "current_sensor.reset()\n",
     "ekf.reset()\n",
     "\n",
-    "try:\n",
-    "    while True:\n",
-    "        # sensor readings\n",
-    "        voltage_reading = voltage_sensor.read()\n",
-    "        current_reading = current_sensor.read()\n",
+    "for _ in time:\n",
+    "    # sensor readings\n",
+    "    voltage_reading = voltage_sensor.read()\n",
+    "    current_reading = current_sensor.read()\n",
     "\n",
-    "        # extended kalman filter\n",
-    "        ekf.predict(u=current_reading)\n",
-    "        ekf.update(\n",
-    "            z=voltage_reading,\n",
-    "            hx=system.hx,\n",
-    "            hx_args=current_reading,\n",
-    "            h_jacobian=system.h_jacobian,\n",
-    "        )\n",
+    "    # extended kalman filter\n",
+    "    ekf.predict(u=current_reading)\n",
+    "    ekf.update(\n",
+    "        z=voltage_reading,\n",
+    "        hx=system.hx,\n",
+    "        hx_args=current_reading,\n",
+    "        h_jacobian=system.h_jacobian,\n",
+    "    )\n",
     "\n",
-    "        # store states and sensor readings\n",
-    "        soc_ekf.append(ekf.x[0, 0])\n",
-    "        soc_ekf_std.append(np.sqrt(ekf.P[0, 0]))\n",
-    "        vrc_ekf_std.append(np.sqrt(ekf.P[1, 1]))\n",
+    "    # store states and sensor readings\n",
+    "    soc_ekf.append(ekf.x[0, 0])\n",
+    "    soc_ekf_std.append(np.sqrt(ekf.P[0, 0]))\n",
+    "    vrc_ekf_std.append(np.sqrt(ekf.P[1, 1]))\n",
     "\n",
-    "        v_sense.append(voltage_reading)\n",
-    "        curr_sense.append(current_reading)\n",
-    "\n",
-    "except IndexError as e:\n",
-    "    print(e)"
+    "    v_sense.append(voltage_reading)\n",
+    "    curr_sense.append(current_reading)"
    ]
   },
   {
@@ -326,8 +312,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T20:44:35.528050300Z",
-     "start_time": "2023-11-24T20:44:34.683723500Z"
+     "end_time": "2023-11-26T03:10:30.697596700Z",
+     "start_time": "2023-11-26T03:10:29.889972Z"
     }
    },
    "outputs": [
