--- a/docs/tutorials/testing_jax.ipynb
+++ b/docs/tutorials/testing_jax.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f02118acf65b33c1",
+   "metadata": {},
+   "source": [
+    "# Test JAX Installation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "initial_id",
