--- a/docs/tutorials/02 - soc estimation by ekf.ipynb
+++ b/docs/tutorials/02 - soc estimation by ekf.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "ad2e84f80c47d1c0",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "# SOC Estimation with EKF\n",
     "This notebook demonstrates the use of the extended Kalman filter (EKF) for state of charge (SOC) estimation. The EKF is a nonlinear state estimator that can be used to estimate the SOC of a battery. "
@@ -13,6 +11,8 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ad29ab805a3f35ab",
+   "metadata": {},
    "source": [
     "## Theory\n",
     "\n",
@@ -22,24 +22,24 @@
     "$$\\begin{aligned}\n",
     "\\left[\\begin{array}{c}\n",
     "\\mathrm{SOC}_{k+1} \\\\\n",
-    "V_{\\mathrm{rc}_{1}, k+1}\n",
+    "V_{\\mathrm{rc}_1, k+1}\n",
     "\\end{array}\\right] &=\\left[\\begin{array}{cc}\n",
     "1 & 0 \\\\\n",
-    "0 & exp\\left(-\\frac{\\Delta t}{R_{1} C_{1}}\\right)\n",
+    "0 &  e^{-\\Delta t/{R_1 C_1}}\n",
     "\\end{array}\\right]\\left[\\begin{array}{c}\n",
-    "\\mathrm{SOC}_{k} \\\\\n",
-    "V_{\\mathrm{rc}_{1}, k}\n",
+    "\\mathrm{SOC}_k \\\\\n",
+    "V_{\\mathrm{rc}_1, k}\n",
     "\\end{array}\\right]+\\left[\\begin{array}{c}\n",
     "\\frac{\\Delta t}{Q} \\\\\n",
-    "0\n",
-    "\\end{array}\\right] I_{k} \\\\\n",
-    "V_{\\mathrm{cell}, k} &=\\mathrm{OCV}\\left(\\mathrm{SOC}_{k}\\right)-R_{1} I_{k}-V_{\\mathrm{rc}_{1}, k}\n",
+    "R_1 (1 - e^{-\\Delta t/{R_1 C_1}})\n",
+    "\\end{array}\\right] I_k \\\\\n",
+    "V_{\\mathrm{cell}, k} &=\\mathrm{OCV}\\left(\\mathrm{SOC}_k\\right)-R_1 I_k-V_{\\mathrm{rc}_1, k}\n",
     "\\end{aligned}$$\n",
     "\n",
     "where $\\mathrm{SOC}$ is the state of charge, $Q$ is the capacity, $I$ is the current, $V_{\\mathrm{cell}}$ is the cell voltage, $V_{\\mathrm{rc}_1}$ is the voltage across the resistor-capacitor pair, $C_1$ is the capacitance, and $R_1$ is the resistance. \n",
     "\n",
     "### Extended Kalman Filter\n",
-    "The EKF linearizes the system model by using the first-order Taylor series expansion of the nonlinear system model about the current state estimate $\\mathbf{x}_{k}$ and the current measurement $\\mathbf{z}_{k}$. As a result, EKF is a recursive estimator that uses the current state estimate $\\mathbf{x}_{k}$ and the current measurement $\\mathbf{z}_{k}$ to compute the next state estimate $\\mathbf{x}_{k+1}$. \n",
+    "The EKF linearizes the system model by using the first-order Taylor series expansion of the nonlinear system model about the current state estimate $\\mathbf{x}_k$ and the current measurement $\\mathbf{z}_k$. As a result, EKF is a recursive estimator that uses the current state estimate $\\mathbf{x}_k$ and the current measurement $\\mathbf{z}_k$ to compute the next state estimate $\\mathbf{x}_{k+1}$. \n",
     "\n",
     "The EKF is a two-step process: prediction and update. The prediction step uses the state transition matrix $\\mathbf{F}_{k}$ to propagate the state estimate forward in time. The update step uses the measurement matrix $\\mathbf{H}_{k}$ to update the state estimate based on the measurement. The EKF is an optimal estimator in the sense that it minimizes the mean squared error between the true state and the estimated state. The EKF is defined by the following equations:\n",
     "\n",
@@ -70,25 +70,19 @@
     "| State Vector ($\\mathbf{x}_{k}$)                | $\\begin{bmatrix} \\mathrm{SOC}_{k} & V_{\\mathrm{rc}_{1} , k} \\end{bmatrix}^T$                                                |\n",
     "| Input Vector ($\\mathbf{u}_{k}$)                | $I_{k}$                                                                                                                     |\n",
     "| Measurement Vector ($\\mathbf{z}_{k}$)          | $V_{\\mathrm{cell}, k}$                                                                                                      |\n",
-    "| State Transition Matrix ($\\mathbf{F}_{k}$)     | $\\begin{bmatrix} 1 & 0 \\\\ 0 & \\exp\\left(-\\frac{\\Delta t}{R_{1} C_{1}}\\right) \\end{bmatrix}$                                 |\n",
-    "| Input Matrix ($\\mathbf{B}_{k}$)                | $\\begin{bmatrix} \\frac{\\Delta t}{Q} & 0 \\end{bmatrix}^T$                                                                    |\n",
+    "| State Transition Matrix ($\\mathbf{F}_{k}$)     | $\\begin{bmatrix} 1 & 0 \\\\ 0 & e^{-\\Delta t/{R_{1} C_{1}}} \\end{bmatrix}$                                 |\n",
+    "| Input Matrix ($\\mathbf{B}_{k}$)                | $\\begin{bmatrix} \\frac{\\Delta t}{Q} & R_1 (1 - e^{-\\Delta t/{R_{1} C_{1}}}) \\end{bmatrix}^T$                                                                    |\n",
     "| Measurement Function ($\\mathbf{h}$)            | $\\mathrm{OCV}\\left(\\mathrm{SOC}_{k}\\right)-R_{1} I_{k}-V_{\\mathrm{rc}_{1}, k}$                                              |\n",
     "| Measurement Jacobian Matrix ($\\mathbf{H}_{k}$) | $\\begin{bmatrix} \\frac{\\partial \\mathrm{OCV}\\left(\\mathrm{SOC}_{k}\\right)}{\\partial \\mathrm{SOC}_{k}} & -1 \\end{bmatrix}^T$ |\n",
     "\n",
     "</div>"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "ad29ab805a3f35ab"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "initial_id",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -104,9 +98,7 @@
   {
    "cell_type": "markdown",
    "id": "d578b22b816281cf",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "## Synthetic Data\n",
     "We use Thevenin model with thermal effects to generate synthetic data. The Thevenin model is a simple equivalent circuit model that can be used to simulate the behavior of a battery, as described above. \n",
@@ -120,9 +112,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "81b174f0e812ebf4",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "battery = Thevenin(default_thevenin_inputs)\n",
@@ -148,9 +138,7 @@
   {
    "cell_type": "markdown",
    "id": "86d3d277d5a04e6b",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "## State Estimator\n",
     "\n",
@@ -164,9 +152,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bec37bf46e8b08a1",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "system = IsothermalThevenin(\n",
@@ -190,9 +176,7 @@
   {
    "cell_type": "markdown",
    "id": "b415705fc29d6e68",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "## Sensors\n",
     "\n",
@@ -203,9 +187,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f3e31235799c9b07",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "voltage_sensor = Sensor(name=\"voltage\", time=time, data=voltage)\n",
@@ -215,9 +197,7 @@
   {
    "cell_type": "markdown",
    "id": "4c807d739b967685",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "## Run Estimation\n",
     "\n",
@@ -228,9 +208,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f5be7d8bb5904ef8",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "v_sense = []\n",
@@ -267,9 +245,7 @@
   {
    "cell_type": "markdown",
    "id": "e640f60de6fdc418",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "## Plot Results\n",
     "\n",
@@ -280,9 +256,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f205d439b29e4a70",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "quick_plot(\n",
@@ -311,15 +285,13 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e7385a3e0bc7278f",
+   "metadata": {},
    "source": [
     "We see that EKF (even with isothermal and time-invariant model parameters) does a decent job estimating SOC, but there are a number of issues with our setup that can be improved: the SOC convergence is slow (around 30 min), state estimation confidence is low (note SOC and Vc1 standard deviations of around 0.3 and 0.2V, respectively), and deterioration of state estimate at low SOC regions (around 0.1 and below).\n",
     "\n",
     "These will be a topic of discussion in future tutorials, where we will explore how to improve the state estimation performance by tuning the EKF parameters and using more sophisticated models."
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "e7385a3e0bc7278f"
+   ]
   }
  ],
  "metadata": {
