Add tutorials and update documentation

--- a/docs/tutorials/01 - battery cycling.ipynb
+++ b/docs/tutorials/01 - battery cycling.ipynb
@@ -3,22 +3,20 @@
   {
    "cell_type": "markdown",
    "id": "efca4517a666fded",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "# Battery Cycling Simulations\n",
     "\n",
-    "This notebook demonstrates how to use the Thevenin model to simulate a variety of cycling experiments that are implemented in `sox`. The Thevenin battery model uses [PyBaMM](https://docs.pybamm.org/en/latest/index.html) in the backend, and adds abstractions for easier user interface."
+    "This notebook demonstrates how to use the Thevenin model to simulate a variety of cycling experiments that are implemented in SOX. The Thevenin battery model uses [PyBaMM](https://docs.pybamm.org/en/latest/index.html) in the backend, and adds abstractions for easier user interface.\n",
+    "\n",
+    "Simply put, Thevenin model is a simple electrical representation of a battery cell with a voltage source and one or more RC branches, as outlined in the equations below. SOX provides a simple interface to create an ECM model using [`Thevenin`](https://sox.readthedocs.io/en/latest/autoapi/sox/plant/thevenin/model/index.html) class, and then use it to simulate a variety of cycling experiments using the `solve` method."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "62a046fa6e769518",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sox.plant import Thevenin, default_thevenin_inputs\n",
@@ -28,30 +26,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d0d219cf",
+   "metadata": {},
    "source": [
-    "## Cycling Protocols\n",
-    "There are a handful of cycling protocols that are implemented in the `sox.plant.protocol` module. These protocols are used to simulate the cycling experiments. The protocols are: \n",
+    "# Thevenin Model\n",
     "\n",
-    "- `cc_charge_cv_rest` (CC charge, CV hold, then rest)\n",
-    "- `cc_discharge_rest` (CC discharge then rest)\n",
-    "- `charge_discharge_cycling` (combination of 1+2 with multiple cycles)\n",
-    "- `single_pulse` (CC charge or discharge pulse, then rest)\n",
-    "- `single_pulse_train` (a train of CC pulses with a single C rate, then rest)\n",
-    "- `multi_pulse_train` (a train of CC pulses with multiple C rates, then rest)\n",
-    "- `dst_schedule` (dynamic stress test schedule)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "ca5d28af8a9666e3"
+    "To create a `Thevenin` model, we need to provide a set of [input parameters](https://sox.readthedocs.io/en/latest/autoapi/sox/plant/thevenin/parameters/index.html#sox.plant.thevenin.parameters.Inputs) to it. To help with this, SOX implements a set of [default input](https://sox.readthedocs.io/en/latest/autoapi/sox/plant/thevenin/default/inputs/index.html) parameters that you can import as `default_thevenin_inputs`. These parameters are based on PyBaMM's default parameters for ECM."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "fb2a6c89b02f1282",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# changes default initial soc\n",
@@ -63,26 +50,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ca5d28af8a9666e3",
+   "metadata": {},
    "source": [
-    "## Perform Simulations\n",
-    "We here build experiment objects from protocols and simulate battery response by passing experiments to the `battery` object as in `battery.solve(experiment)`. \n",
+    "## Cycling Protocols\n",
+    "There are a handful of cycling protocols that are implemented in the [`protocol`](https://sox.readthedocs.io/en/latest/autoapi/sox/plant/protocol/index.html) module. These protocols are used to simulate the cycling experiments. The protocols are: \n",
     "\n",
-    "The result is a simulation object with the following properties: `time`, `voltage`, `rc_voltage`, `ocv`, `current`,\n",
-    "`power`, `resistance`, `series_resistance`, `rc_resistance`, `rc_capacitance`, `soc`, `ambient_temperature`,\n",
-    "`cell_temperature`, `jig_temperature`"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "a563300eddb18e12"
+    "- `cc_charge_cv_rest` (CC charge, CV hold, then rest)\n",
+    "- `cc_discharge_rest` (CC discharge then rest)\n",
+    "- `charge_discharge_cycling` (combination of 1+2 with multiple cycles)\n",
+    "- `single_pulse` (CC charge or discharge pulse, then rest)\n",
+    "- `single_pulse_train` (a train of CC pulses with a single C rate, then rest)\n",
+    "- `multi_pulse_train` (a train of CC pulses with multiple C rates, then rest)\n",
+    "- `dst_schedule` (dynamic stress test schedule)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf1d630711d92a84",
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "00e5c76c",
+   "metadata": {},
    "outputs": [],
    "source": [
     "experiments = [\n",
@@ -118,27 +105,49 @@
     "        number_of_cycles=5,\n",
     "        sampling_time_s=1,\n",
     "    ),\n",
-    "]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a563300eddb18e12",
+   "metadata": {},
+   "source": [
+    "## Perform Simulations\n",
     "\n",
+    "We here simulate battery response by passing experiments to the `battery` object as in `battery.solve(experiment)`. \n",
+    "\n",
+    "The result is a simulation [`Output`](https://sox.readthedocs.io/en/latest/autoapi/sox/plant/thevenin/parameters/index.html#sox.plant.thevenin.parameters.Outputs) object with the following properties: `time`, `voltage`, `rc_voltage`, `ocv`, `current`,\n",
+    "`power`, `resistance`, `series_resistance`, `rc_resistance`, `rc_capacitance`, `soc`, `ambient_temperature`,\n",
+    "`cell_temperature`, `jig_temperature`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf1d630711d92a84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# simulates the experiments\n",
     "solutions = [battery.solve(e) for e in experiments]"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "cdc55422d1c70869",
+   "metadata": {},
    "source": [
     "## Compare Results\n",
     "\n",
     "Utility function `quick_plot` can be used to create interactive graphs of electrical and thermal battery parameters."
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "cdc55422d1c70869"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e0516bc73f9bdf3e",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# generates voltage profile of all protocols\n",
@@ -151,19 +160,13 @@
     "    y_labels=\"Voltage (V)\",\n",
     "    n_cols=3,\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "e0516bc73f9bdf3e"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "115d2a942c0e2d38",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# generates voltage, current, temperature, and soc graphs for a single protocol\n",
