Update Thevenin Model in battery cycling tutorial

--- a/docs/tutorials/01 - battery cycling.ipynb
+++ b/docs/tutorials/01 - battery cycling.ipynb
@@ -29,7 +29,7 @@
    "id": "d0d219cf",
    "metadata": {},
    "source": [
-    "# Thevenin Model\n",
+    "## Thevenin Model\n",
     "\n",
     "To create a `Thevenin` model, we need to provide a set of [input parameters](https://sox.readthedocs.io/en/latest/autoapi/sox/plant/thevenin/parameters/index.html#sox.plant.thevenin.parameters.Inputs) to it. To help with this, SOX implements a set of [default input](https://sox.readthedocs.io/en/latest/autoapi/sox/plant/thevenin/default/inputs/index.html) parameters that you can import as `default_thevenin_inputs`. These parameters are based on PyBaMM's default parameters for ECM."
    ]
